--- a/melder_info.ini
+++ b/melder_info.ini
@@ -1,6 +1,7 @@
 title=Scrapii
 author=Arkii
-version=1.0
-patch=1.0.1793
+version=1.1
+patch=1.0.1797
+destination=gui/components/MainUI/Addons
 url=http://forums.firefallthegame.com/community/threads/addon-scrapii-an-auto-salvager.4910021/
 description=Automatically salvage items based on your settings
