--- a/melder_info.ini
+++ b/melder_info.ini
@@ -1,7 +1,9 @@
-title=Scrapii
+title=Scrapii PTS
 author=Arkii
-version=1.8
+version=1.9
 patch=1.3.1861
 destination=gui/components/MainUI/Addons
+providertype=git
+updateurl=PTS@https://github.com/GoomiChan/Scrapii.git
 url=http://forums.firefallthegame.com/community/threads/addon-scrapii-an-auto-salvager.4910021/
-description=Automatically salvage items based on your settings
+description=Automatically salvage items based on your settings - PTS only version
